add script command neo

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,3 +24,6 @@ black = "^23.9.1"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+"neo" = "wikilinker.cli:run"
