--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,13 @@ authors = ["Sebastian Schramm <schrammsm@gmail.com>"]
 readme = "chainlit.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.10"
+torch = ">=2.0.0, !=2.0.1"
 chainlit = "^0.6.402"
 transformers = "^4.33.1"
 auto-gptq = "^0.4.2"
 accelerate = "^0.22.0"
 optimum = "^1.13.1"
-
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.4.0"
